[UOL-31] fix z-index for header to prevent overlap

--- a/lms/static/sass/base/_override.scss
+++ b/lms/static/sass/base/_override.scss
@@ -22,6 +22,7 @@
     position: relative;
     box-sizing: border-box;
     min-height: 76px;
+    z-index: 9999;
 
     @media screen and (max-width: $breakpoint-tablet) {
         padding: 14px 15px 15px;
